--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email:
 description: >- # this means to ignore newlines until "baseurl:"
   NAIT Library's guide to creating websites with Jekyll.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "www.jekyllyourlife.site" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:
 destination: public
